# multiprocessing

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
src/: __init__.py  program.py
