[tool.poetry]
name = "cli-template-py"
version = "0.2.0"
description = ""
authors = ["andrzej <andrzej.ostromecki@gmail.com>"]
readme = "README.md"
packages = [{include = "cli_template_py"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
